# storyteller

./: .gitignore  LICENSE  README.md  build.gradle  changelog.md  pyproject.toml  settings.gradle
.github/workflows/: ci.yaml
docs/flowcharts/: par_node  seq_node
docs/flowcharts/code_perspective/: leaf  par_node  seq_node
docs/flowcharts/journal_perspective/: leaf
src/main/java/com/github/filipmalczak/storyteller/: FSUtils.java
src/main/java/com/github/filipmalczak/storyteller/api/: StorytellerFactory.java  StorytellerSetup.java
src/main/java/com/github/filipmalczak/storyteller/impl/: IterationUtils.java  TimeUtils.java  package-info.java
src/main/java/com/github/filipmalczak/storyteller/stack/: Session.java  SkippingStrategy.java  StackedExecutor.java
src/main/java/com/github/filipmalczak/storyteller/storage/: DocumentsApi.java  FilesApi.java  PropertiesApi.java  ReadFilesApi.java  ReadStorage.java  ReadWriteFilesApi.java  ReadWriteStorage.java  Storage.java  todo.txt
src/main/resources/: log4j2.properties
src/storyteller/: code_extractor.py  fluent_decorator.py  fsdbm.py  git_workspace.py  impl.py  intercepted.py  project.py  tasktree_api.py  workspace_api.py
src/test/java/com/github/filipmalczak/storyteller/impl/: DocWithDate.java  ExecutionTracker.java  NitriteUsageTests.java  SimpleDoc.java  TrivialIdGeneratorFactory.java  TrivialTaskType.java
src/test/java/com/github/filipmalczak/storyteller/utils/: AssertiveListener.java  ExecutionTracker.java
src/test/resources/: log4j2.properties
visualizer/: build.gradle
(+517 files in other folders)
