[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Filip Malczak", email = "filip.malczak@gmail.com"},
]
dependencies = [
    "GitPython>=3.1.27",
    "ZODB>=5.7.0",
]
requires-python = ">=3.10"
license = {text = "GPL3"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
